<resources>
    <string name="app_name">Simple File Browser</string>
    <string name="author">Author: Touch Force (by Dmitriy Bukharev)</string>
    <string name="no_files_string">No files in this directory</string>
    <string name="file_type_sting">File</string>
    <string name="folder_type_sting">Folder</string>
    <string name="archive_name">Archive name</string>
    <string name="moving_file">File moving</string>
    <string name="moving_folder">Folder moving</string>
    <string name="copying_file">File copying</string>
    <string name="copying_folder">Folder copying</string>
    <string name="compression_files">Files compression</string>
    <string name="moving_in_progress">Moving in progress</string>
    <string name="copying_in_progress">Copying in progress</string>
    <string name="compression_in_progress">Compression in progress</string>
    <string name="multiple_files_copying">Files copying</string>
    <string name="multiple_files_moving">Files moving</string>

    <string name="copy_file_string">Copy</string>
    <string name="move_file_string">Move</string>
    <string name="delete_file_string">Delete</string>
    <string name="rename_file_string">Rename</string>
    <string name="info_file_string">Information</string>
    <string name="compress_file_string">Compress</string>

    <string name="settings_tile">Settings</string>
    <!--Dialogs                            -->
    <string name="information_title">Information</string>
    <string name="information_file_name">File name: </string>
    <string name="information_file_path">File path: </string>
    <string name="information_file_size">File size: </string>
    <string name="information_file_checksum">Checksum: </string>
    <string name="information_file_last_modified">Last modified: </string>
    <string name="information_file_created">Created: </string>

    <string name="DIALOG_OK">OK</string>
    <string name="DIALOG_CANCEL">Cancel</string>
    <string name="DIALOG_NO">No</string>

    <string name="rewrite_file">Rewrite %s?</string>
    <string name="rewrite_file_title">Rewriting file</string>
    <string name="merge_folders_title">Merge folders</string>
    <string name="merge_folders">Merge %1$s and %2$s?</string>
    <string name="rewrite_file_checkbox">Apply to all selected files</string>

    <string name="delete_one_warning_text">Are you sure you want to delete %1$s?</string>
    <string name="delete_multiple_warning_text">Are you sure you want to delete %1$s files?</string>
    <string name="delete_warning_title">Files deletion</string>

    <string name="new_file">New…</string>
    <!--/Dialogs-->
    <string-array name="spinner_options">
        <item id="internal_option">Internal storage</item>
        <item id="sd_card_option">SD card</item>
    </string-array>



    <!--Toasts-->
    <!--Warnings-->
    <string name="files_access_permission_denied">Please, allow Simple file browser to access Storage.</string>
    <string name="archive_exists">This archive already exists!</string>
    <string name="file_already_exists">A file with this name already exists.</string>
    <string name="folder_already_exists">A folder with this name already exists.</string>
    <!--Warnings-->
    <!--/Toasts-->

    <!--Settings-->
    <string name="settings_reset_sd_card_path">Reset SD-card path</string>
    <string name="settings_reset_sd_card_path_hint">If you set SD-card path wrongly.</string>

    <string name="settings_display_hidden_files">Show hidden files</string>
    <string name="settings_display_hidden_files_hint">Show files and folders starting from \".\" .</string>
    <!--/Settings-->

    <!--Three dots menu-->
    <string name="three_dots_sort">Sort</string>
    <string name="three_dots_select_all">Select all</string>
    <string name="three_dots_about">About &amp; donate</string>
    <!--Sort types-->
    <string name="three_dots_sort_by_name">By name</string>
    <string name="three_dots_sort_by_date">By date</string>
    <string name="three_dots_sort_descending">Descending</string>
    <!--/Sort types-->
    <!--/Three dots menu-->

    <!--Paste menu-->
    <string name="paste_menu_sd_card">SD card</string>
    <string name="paste_menu_internal_storage">Internal storage</string>
    <string name="paste_menu_paste">Paste</string>
    <string name="paste_menu_more">More</string>
    <!--/Paste menu-->

    <!--Extraction menu-->
    <string name="extract_menu_extract_selected_files">Extract selected files</string>
    <!--<string name="extract_menu_select_all_files">Select all files</string>-->
    <!--/Extraction menu-->

    <!--Activities    -->
    <string name="activity_zip_archive_preview_title">Archive preview</string>
    <string name="activity_information_title">About app</string>
    <!--/Activities    -->

</resources>
