<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <!--<TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/settings_tile"
        android:layout_marginBottom="10dp"/>-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/reset_sd_card_path_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle">

        <TextView
            android:id="@+id/reset_sd_card_path_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_reset_sd_card_path"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reset_sd_card_path_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/settings_reset_sd_card_path_hint"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/reset_sd_card_path_title"
            app:layout_constraintTop_toBottomOf="@+id/reset_sd_card_path_title" />
    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/reset_sd_card_path_hint"
        tools:layout_editor_absoluteX="12dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/switch_display_hidden_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle">

        <TextView
            android:id="@+id/switch_display_hidden_files_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_display_hidden_files"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/switch_display_hidden_files_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/settings_display_hidden_files_hint"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/switch_display_hidden_files_title"
            app:layout_constraintTop_toBottomOf="@+id/switch_display_hidden_files_title" />

        <CheckBox
            android:id="@+id/display_hidden_files_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/switch_display_hidden_files_hint"
        tools:layout_editor_absoluteX="12dp" />
    <!--<Button
        android:id="@+id/reset_sd_card_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/settings_reset_sd_card_path" />-->

</LinearLayout>